--- a/PROJECT/3/package.json
+++ b/PROJECT/3/package.json
@@ -28,6 +28,7 @@
     "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "material-ui": "^0.20.2",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
