--- a/STUDENTS/Denis Bushuev/project/package.json
+++ b/STUDENTS/Denis Bushuev/project/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "material-ui": "^0.20.2",
     "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
