--- a/STUDENTS/Maxim Rosin/3/package.json
+++ b/STUDENTS/Maxim Rosin/3/package.json
@@ -24,8 +24,11 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "material-ui": "^0.20.2",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
