--- a/STUDENTS/KirylMatsenka/package.json
+++ b/STUDENTS/KirylMatsenka/package.json
@@ -32,7 +32,9 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
