--- a/STUDENTS/Denis Bushuev/project/package.json
+++ b/STUDENTS/Denis Bushuev/project/package.json
@@ -17,7 +17,8 @@
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
