--- a/STUDENTS/Denis Bushuev/project/package.json
+++ b/STUDENTS/Denis Bushuev/project/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "server": "webpack-dev-server"
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "Jestric",
@@ -18,7 +18,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -31,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react-addons-update": "^15.6.2",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
