--- a/STUDENTS/Denis Bushuev/project/package.json
+++ b/STUDENTS/Denis Bushuev/project/package.json
@@ -12,15 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -33,7 +37,6 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "react-addons-update": "^15.6.2",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
