--- a/STUDENTS/Yuriy Yastrebov/project/package.json
+++ b/STUDENTS/Yuriy Yastrebov/project/package.json
@@ -29,6 +29,8 @@
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "popper.js": "^1.16.0",
@@ -37,6 +39,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   }
 }
