--- a/STUDENTS/Egor Salomatin/package.json
+++ b/STUDENTS/Egor Salomatin/package.json
@@ -28,11 +28,14 @@
   "dependencies": {
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   }
 }
