--- a/STUDENTS/KirylMatsenka/package.json
+++ b/STUDENTS/KirylMatsenka/package.json
@@ -31,6 +31,8 @@
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.6.1",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
@@ -38,6 +40,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   }
 }
