--- a/STUDENTS/Yuriy Yastrebov/project/package.json
+++ b/STUDENTS/Yuriy Yastrebov/project/package.json
@@ -33,6 +33,7 @@
     "history": "^4.10.1",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
+    "normalizr": "^3.5.0",
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -40,6 +41,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-persist": "^6.0.0"
   }
 }
