--- a/STUDENTS/Nick Strelchenko/papka/package.json
+++ b/STUDENTS/Nick Strelchenko/papka/package.json
@@ -15,12 +15,14 @@
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "normalizr": "^3.5.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-api-middleware": "^3.2.0",
     "redux-persist": "^6.0.0",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10"
